@@ -1,3 +1,8 @@
+2000-07-07  Greg McGary  <greg@mcgary.org>
+
+	* posix/regex.c (EXTEND_BUFFER): Compute increment once.
+	Move all three components of a bounded pointer.
+
 2000-07-07  Ulrich Drepper  <drepper@redhat.com>
 
 	* locale/programs/locale.c (write_locales): Don't simply add all
